Primer commit del ejercicio todo list

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,17 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+body{
+    background-color: #fffafa;
+    /* #756f75;
+    //  #284747;
+    */
+    /* others #578a8c*/
+    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+}
+
+.fondo-lista{
+    background-color: #578a8c;
+}
